# audio-classification

./: .gitignore  README.md  main.ipynb  module.ipynb  pyproject.toml
src/: audio_analyzer.py  audio_library_reader.py  audio_misc_features_analyzer.py  audio_mpeg_features_analyzer.py  audio_spectral_features_analyzer.py  audio_utils.py  config.py  main.py  utils.py
