[project]
name = "audio-classification"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "eddienubes", email = "cool.gegeg@gmail.com" },
]
dependencies = [
    "pandas>=2.1.4",
    "setuptools>=69.0.3",
    "jupyter>=1.0.0",
    "librosa>=0.10.1",
    "resampy>=0.4.2",
    "rich>=13.7.0",
    "scikit-learn>=1.3.2",
    "pyspark[sql]>=3.5.0",
    "matplotlib>=3.8.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
package-type = "application"
